HDRI showing behind the objects even when world background is set to transparent #57102

Closed
opened 2018-10-08 16:48:44 +02:00 by pratik solanki · 3 comments

System Information
ubunutu 16.4, nvidea 960 gtx

Blender Version
blender2.8 (b6c1443742)

Short description of error
HDRI or any other background showing behind the objects even when world background is set to transparent

Exact steps for others to reproduce the error

check the file "compblur2.8"
open and press f12 , now in the render ,when we add blur node and blur the object , it shows HDRI which is behind that object , it should only show alpha instead of HDRI
also turning on compositing does not render , so its off at the moment , but go to compositor and you can check the result there ,

check the compblur 2.79 file , render it and when it gets blurred in comp we will not see any HDRI behind that object

compblur 2.79.blend

compblur 2.8.blend

**System Information** ubunutu 16.4, nvidea 960 gtx **Blender Version** blender2.8 (b6c14437427) **Short description of error** HDRI or any other background showing behind the objects even when world background is set to transparent **Exact steps for others to reproduce the error** check the file "compblur2.8" open and press f12 , now in the render ,when we add blur node and blur the object , it shows HDRI which is behind that object , it should only show alpha instead of HDRI also turning on compositing does not render , so its off at the moment , but go to compositor and you can check the result there , check the compblur 2.79 file , render it and when it gets blurred in comp we will not see any HDRI behind that object [compblur 2.79.blend](https://archive.blender.org/developer/F4988759/compblur_2.79.blend) [compblur 2.8.blend](https://archive.blender.org/developer/F4988760/compblur_2.8.blend)
Author

Added subscriber: @pratiksolanki

Added subscriber: @pratiksolanki

This issue was referenced by 8c4a7593f2

This issue was referenced by 8c4a7593f2189a57d348f4c3caf9fc1e3d552059

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57102
No description provided.