EEVEE: Fix unpremultiplied alpha in render result

Fix T57102